DuPont DevSB/src/objects/Risks_Issues__c.object
<CustomObject>
    <description>Used to log Risks &amp; Issues</description>
    <fields>
        <fullName>Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally tie the Risk/Issue to a Build</description>
        <inlineHelpText>Optionally tie the Risk/Issue to a Build</inlineHelpText>
        <label>Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Risks &amp; Issues</relationshipLabel>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Issue or Risk</description>
        <inlineHelpText>Required to enter a description of the problem statement</inlineHelpText>
        <label>Problem Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mitigation_Description__c</fullName>
        <description>Text area to capture the mitigation approach</description>
        <inlineHelpText>Enter the mitigation approach for the risk/issue</inlineHelpText>
        <label>Mitigation Approach</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <description>Enter the Severity level of the Risk/Issue</description>
        <inlineHelpText>Required: Enter the Severity level of the Risk/Issue</inlineHelpText>
        <label>Severity Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally tie a Risk/Issue to a Sprint</description>
        <inlineHelpText>Optionally tie a Risk/Issue to a Sprint</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Risks &amp; Issues</relationshipLabel>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally tie the Risk/Issue to a User Story</description>
        <inlineHelpText>Optionally tie the Risk/Issue to a User Story</inlineHelpText>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Risks &amp; Issues</relationshipLabel>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the related work for the RIsk/issue</description>
        <inlineHelpText>Enter the related work for the RIsk/issue</inlineHelpText>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Risks &amp; Issues</relationshipLabel>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Risks &amp; Issues</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Risks &amp; Issues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks &amp; Issues</pluralLabel>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>A Risk that has been realized and is now a Issue to a program, project, sprint, or user story</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Issue has not materialized yet and is merely a Risk to a program, project, sprint, or user story</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_Required</fullName>
        <active>true</active>
        <description>Description is Required</description>
        <errorConditionFormula>ISBLANK( Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description Field is Required</errorMessage>
    </validationRules>
</CustomObject>